Add enums for capacity units and warehouse types; update authentication service and inventory item fields